set(TARGET_NAME LNLib)
project(${TARGET_NAME} LANGUAGES CXX)
set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
add_library(${TARGET_NAME} SHARED "")
target_compile_definitions(LNLib PRIVATE LNLIB_HOME)

target_include_directories(${TARGET_NAME} PRIVATE ${SOURCE_DIR}/include)

include(FetchContent)
FetchContent_Declare(
  Eigen
  GIT_REPOSITORY https://gitlab.com/libeigen/eigen.git
  GIT_TAG master
  GIT_SHALLOW TRUE
  GIT_PROGRESS TRUE)
set(BUILD_TESTING OFF)
set(EIGEN_BUILD_TESTING OFF)
set(EIGEN_MPL2_ONLY ON)
set(EIGEN_BUILD_PKGCONFIG OFF)
set(EIGEN_BUILD_DOC OFF)
FetchContent_MakeAvailable(Eigen)
target_link_libraries(${TARGET_NAME} PRIVATE Eigen3::Eigen)

file(GLOB rootfiles *.cpp *.h)
source_group("" FILES ${rootfiles})
target_sources(${TARGET_NAME} PRIVATE ${rootfiles})
SUBDIRLIST(SUBDIRS ${SOURCE_DIR})
foreach(subdir ${SUBDIRS})
    file(GLOB subdirFiles ${subdir}/*.cpp ${subdir}/*.h)
    string(REPLACE "/" "\\" subdir ${subdir})
    source_group(${subdir} FILES ${subdirFiles})
    target_sources(${TARGET_NAME} PRIVATE ${subdirFiles})
endforeach()

install(TARGETS ${TARGET_NAME}
        RUNTIME DESTINATION ${CMAKE_BINARY_DIR}/${TARGET_NAME}/bin/$<CONFIG>
        ARCHIVE DESTINATION ${CMAKE_BINARY_DIR}/${TARGET_NAME}/lib/$<CONFIG>)
install(DIRECTORY include DESTINATION ${CMAKE_BINARY_DIR}/${TARGET_NAME})
